--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,16 +2,18 @@
 
 one:
   name: MyString
-  username: MyString
-  mail: MyString
+  address: MyString
+  email: MyString
   birthday: 2018-04-12
   description: MyText
-  lastlogin: 2018-04-12 11:35:17
+  laslogin: 2018-04-12 18:44:44
+  isadmin: false
 
 two:
   name: MyString
-  username: MyString
-  mail: MyString
+  address: MyString
+  email: MyString
   birthday: 2018-04-12
   description: MyText
-  lastlogin: 2018-04-12 11:35:17
+  laslogin: 2018-04-12 18:44:44
+  isadmin: false
